@@ -1853,9 +1853,10 @@ Channel.prototype.tryUpdateFilter = function(user, f) {
     var re = f.source;
     var flags = f.flags;
     // Temporary fix
-    f.replace = f.replace.replace("style", "stlye");
+    // 2013-09-12 Temporary my ass
+    f.replace = f.replace.replace(/style/g, "stlye");
     f.replace = sanitize(f.replace).xss();
-    f.replace = f.replace.replace("stlye", "style");
+    f.replace = f.replace.replace(/stlye/g, "style");
     try {
         new RegExp(re, flags);
     }
