@@ -1,3 +1,7 @@
+Thu Sep 12 13:01 2013 CDT
+    * lib/channel.js: Fix the XSS filter hack that allows style attributes
+      to allow more than one in a chat filter replacement
+
 Wed Sep 11 22:13 2013 CDT
     * lib/channel.js, lib/user.js: Remove "afkers" array, replace afkcount
       with a function that calculates how many users are eligible to
